--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ targetCompatibility = 1.6
 
 repositories { jcenter() }
 
-version = '0.0.2'
+version = '0.0.3'
 group = "org.mockito"
 
 dependencies {
@@ -50,6 +50,10 @@ pluginBundle {
             id = 'org.mockito.release-workflow'
             displayName = 'Mockito release workflow plugin'
         }
+    }
+
+    mavenCoordinates {
+        artifactId = "mockito-release-tools"
     }
 }
 
