Documented build script
Wrote a comment that describes why we want to avoid transitive dependencies of json-simple dependency.

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile gradleApi()
     //TODO SF use jcabi to edit issues after the release so that they have the milestone attached
     //compile "com.jcabi:jcabi-github:0.17"
+
+    //Using @jar to avoid transitive dependencies (json-simple declares compile dependency on junit!)
     compile "com.googlecode.json-simple:json-simple:1.1.1@jar"
 
     testCompile("org.spockframework:spock-core:0.7-groovy-2.0") {
