--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
 }
 
+apply plugin: 'maven'
 apply plugin: 'idea'
 apply plugin: 'groovy'
 apply plugin: 'com.gradle.plugin-publish'
