Public vs internal API separation
Moved the concrete classes to internal implementation and exposed well documented interfaces

--- a/src/main/resources/META-INF/gradle-plugins/org.mockito.release-notes.properties
+++ b/src/main/resources/META-INF/gradle-plugins/org.mockito.release-notes.properties
@@ -1,1 +1,1 @@
-implementation-class=org.mockito.release.gradle.notes.ReleaseNotesPlugin
+implementation-class=org.mockito.release.internal.gradle.DefaultReleaseNotesPlugin
