--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -8,6 +8,31 @@ notes {
     gitHubLabelMapping = ["noteworthy": "Noteworthy", "bugfix": "Bugfixes"]
 }
 
+task gitAddBumpVersion(type: Exec) {
+    mustRunAfter tasks.bumpVersionFile
+    commandLine = ["git", "add", "version.properties"]
+}
+
+task gitAddReleaseNotes(type: Exec) {
+    mustRunAfter tasks.updateReleaseNotes
+    commandLine = ["git", "add", notes.notesFile]
+}
+
+task gitCommit(type: Exec) {
+    mustRunAfter tasks.gitAddBumpVersion, tasks.gitAddReleaseNotes
+    commandLine = ["git", "commit", "--author", "Mockito Release Tools <mockito.release.tools@gmail.com>",
+                   "-m", "Bumped version and updated release notes"]
+}
+
+task prepareRelease {
+    dependsOn bumpVersionFile, updateReleaseNotes, gitAddBumpVersion, gitAddReleaseNotes, gitCommit
+    description = "Prepares release. Also useful for local testing."
+}
+
+task finalizeRelease {
+    description = "Finalizes the release, pushes code, publishes to repositories."
+}
+
 allprojects {
     plugins.withId("maven-publish") {
         project.publishing {
@@ -19,12 +44,17 @@ allprojects {
         }
 
         project.apply plugin: "com.jfrog.bintray"
+        finalizeRelease.dependsOn bintrayUpload
 
         bintray {
             user = 'szczepiq'
             key = System.env.BINTRAY_API_KEY
 
-            publications = project.publishing.publications*.name
+            afterEvaluate {
+                //we have to access publications as late as possible,
+                // otherwise stuff does not work, for example pom does not have dependencies :)
+                publications = project.publishing.publications*.name
+            }
 
             publish = true
 
