--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -105,7 +105,7 @@ allprojects {
             user = 'szczepiq'
             key = System.env.BINTRAY_API_KEY
 
-            dryRun = project.ext.has("bintrayDryRun")
+            dryRun = project.ext.has("releaseDryRun")
 
             afterEvaluate {
                 //we have to access publications as late as possible,
