--- a/build.gradle
+++ b/build.gradle
@@ -60,3 +60,13 @@ pluginBundle {
     }
 }
 
+task travisRelease {
+    doLast {
+        if ("master" == System.getenv('TRAVIS_BRANCH')) {
+            logger.lifecycle("Publishing to Gradle Plugin Portal...")
+            exec { commandLine "./gradlew", "publishPlugins" }
+        } else {
+            logger.lifecycle("Current branch is not 'master'. Skipping publication to Gradle Plugin Portal.")
+        }
+    }
+}
