Attempting to fix problem with publication
Cargo culting. Trying to fix the issue by applying some tweaks that worked for us in different Travis CI jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ language: java
 jdk:
   - oraclejdk8
 
+#TODO why do we need below?
+env:
+  global:
+  - TERM=dumb
+  - GRADLE_OPTS="-XX:+UseCompressedOops -Djava.awt.headless=true"
+
 #don't build tags
 branches:
   except:
