Removed unnecessary code
Removed not needed code. Identified the problem with Travis CI and Gradle Plugin Portal env variables. Wrote a TODO for it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,6 @@ language: java
 jdk:
   - oraclejdk8
 
-#TODO why do we need below?
-env:
-  global:
-  - TERM=dumb
-  - GRADLE_OPTS="-XX:+UseCompressedOops -Djava.awt.headless=true"
-
 #don't build tags
 branches:
   except:
@@ -30,5 +24,7 @@ install:
 script:
   - ./gradlew build -s
 
+#TODO we need to pass Gradle Plugin Portal secure variables as project properties
+#"export ORG_GRADLE_PROJECT_gradle.publish.key=foo" does not work in bash
 after_success:
   - ./gradlew travisRelease -s
