--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ targetCompatibility = 1.6
 repositories { jcenter() }
 
 version = '0.1.3'
+println "  Version: $version"
 group = 'gradle.plugin.org.mockito'
 
 dependencies {
