--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
         exclude module: "groovy-all"
     }
     testCompile "cglib:cglib-nodep:2.2.2"
+    testCompile "commons-lang:commons-lang:2.4"
     testCompile gradleTestKit()
 }
 
