Moved the plugin back to internal package
I got lost... There is no need to make this plugin public. Users can refer to it via Gradle's plugin id, currently it is "org.mockito.mockito-release-tools.bintray".

--- a/src/main/resources/META-INF/gradle-plugins/org.mockito.mockito-release-tools.bintray.properties
+++ b/src/main/resources/META-INF/gradle-plugins/org.mockito.mockito-release-tools.bintray.properties
@@ -1,1 +1,1 @@
-implementation-class=org.mockito.release.gradle.BintrayPlugin
+implementation-class=org.mockito.release.internal.gradle.BintrayPlugin
