--- a/src/main/resources/META-INF/gradle-plugins/org.mockito.release-tools.versioning.properties
+++ b/src/main/resources/META-INF/gradle-plugins/org.mockito.release-tools.versioning.properties
@@ -1,1 +1,1 @@
-implementation-class=org.mockito.release.internal.gradle.DefaultVersioningPlugin
+implementation-class=org.mockito.release.internal.gradle.VersioningPlugin
