Removed plugin that is not used any more
I found easier ways to configure the release than an elaborate and complicated workflow plugin.

--- a/build.gradle
+++ b/build.gradle
@@ -44,13 +44,10 @@ pluginBundle {
     tags = ['mockito', 'continuous delivery', 'release']
 
     plugins {
+        //TODO update plugins
         releaseNotesPlugin {
             id = 'org.mockito.release-notes'
             displayName = 'Mockito automated release notes generation plugin'
-        }
-        releaseWorkflowPlugin {
-            id = 'org.mockito.release-workflow'
-            displayName = 'Mockito release workflow plugin'
         }
     }
 
