--- a/src/main/resources/META-INF/gradle-plugins/org.mockito.release-notes.properties
+++ b/src/main/resources/META-INF/gradle-plugins/org.mockito.release-notes.properties
@@ -1,1 +1,1 @@
-implementation-class=org.mockito.release.internal.gradle.DefaultReleaseNotesPlugin
+implementation-class=org.mockito.release.internal.gradle.ReleaseNotesPlugin
