--- a/src/main/resources/META-INF/gradle-plugins/org.mockito.mockito-release-tools.java-library.properties
+++ b/src/main/resources/META-INF/gradle-plugins/org.mockito.mockito-release-tools.java-library.properties
@@ -1,1 +1,1 @@
-implementation-class=org.mockito.release.internal.gradle.DefaultJavaLibraryPlugin
+implementation-class=org.mockito.release.internal.gradle.JavaLibraryPlugin
