--- a/src/main/resources/META-INF/gradle-plugins/org.mockito.release-tools.contributors.properties
+++ b/src/main/resources/META-INF/gradle-plugins/org.mockito.release-tools.contributors.properties
@@ -1,1 +1,1 @@
-implementation-class=org.mockito.release.internal.gradle.DefaultContributorsPlugin
+implementation-class=org.mockito.release.internal.gradle.ContributorsPlugin
