--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ apply plugin: 'idea'
 apply plugin: 'groovy'
 apply plugin: 'com.gradle.plugin-publish'
 apply plugin: 'maven'
+apply plugin: 'checkstyle'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
