--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'groovy'
 apply plugin: 'com.gradle.plugin-publish'
 apply plugin: 'maven'
 apply plugin: 'checkstyle'
+apply plugin: 'codenarc'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
