--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,12 @@ pluginBundle {
             id = 'org.mockito.release-notes'
             displayName = 'Mockito automated release notes generation plugin'
         }
+
+        versioningPlugin {
+            id = 'org.mockito.release-tools.versioning'
+            displayName = 'Mockito automated versioning plugin'
+            tags = ['mockito', 'continuous delivery', 'release', 'versioning', 'auto-versioning', 'semantic-versioning']
+        }
     }
 
     mavenCoordinates {
