--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     dependencies {
         classpath "com.gradle.publish:plugin-publish-plugin:0.9.6"
-        classpath "gradle.plugin.org.mockito:mockito-release-tools:0.8.2"
+        classpath "gradle.plugin.org.mockito:mockito-release-tools:0.8.10"
     }
 }
 
@@ -15,9 +15,10 @@ apply plugin: 'groovy'
 apply plugin: 'com.gradle.plugin-publish'
 apply plugin: 'checkstyle'
 apply plugin: 'codenarc'
-apply plugin: 'org.mockito.release-tools.versioning'
+apply plugin: 'org.mockito.release-tools.auto-versioning'
 
 apply from: 'gradle/precommit.gradle'
+apply from: 'gradle/release.gradle'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -87,7 +88,7 @@ task travisRelease {
     doLast {
         logger.lifecycle("{} - Publishing to Gradle Plugin Portal...", path)
         exec {
-            commandLine "./gradlew", "publishPlugins",
+            commandLine "./gradlew", "publishPlugins", "bumpVersionAndPush",
                     "-Pgradle.publish.key=${System.getenv('GRADLE_PUBLISH_KEY')}",
                     "-Pgradle.publish.secret=${System.getenv('GRADLE_PUBLISH_SECRET')}"
         }
