--- a/build.gradle
+++ b/build.gradle
@@ -88,13 +88,14 @@ task releaseNeeded {
     }
 }
 
+//TODO ww add -Preleasing.dryRun=false to commandLine when releaseNeeded takes into account [ci skipRelease] in commit msg
 task travisRelease {
     dependsOn releaseNeeded
     onlyIf { releaseNeeded.needed }
     doLast {
         logger.lifecycle("{} - Publishing to Gradle Plugin Portal...", path)
         exec {
-            commandLine "./gradlew", "publishPlugins",
+            commandLine "./gradlew", "publishPlugins bumpVersionAndPush",
                     "-Pgradle.publish.key=${System.getenv('GRADLE_PUBLISH_KEY')}",
                     "-Pgradle.publish.secret=${System.getenv('GRADLE_PUBLISH_SECRET')}"
         }
