--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ task travisRelease {
     doLast {
         logger.lifecycle("{} - Publishing to Gradle Plugin Portal...", path)
         exec {
-            commandLine "./gradlew", "publishPlugins bumpVersionAndPush",
+            commandLine "./gradlew", "publishPlugins", "bumpVersionAndPush",
                     "-Pgradle.publish.key=${System.getenv('GRADLE_PUBLISH_KEY')}",
                     "-Pgradle.publish.secret=${System.getenv('GRADLE_PUBLISH_SECRET')}"
         }
