Fixed the execution of e2e test
1. Started using imperative project.exec method
2. Used '-x' to exclude tasks that require secret settings

--- a/e2eTests/build.gradle
+++ b/e2eTests/build.gradle
@@ -36,10 +36,11 @@ def bumpProjectVersion(String projectName) {
 }
 
 def performRelease(String projectName) {
-    tasks.create("performRelease$projectName", Exec) {
+    println "  Testing the Gradle build..."
+    exec {
         workingDir "$projectDir/$projectName"
-        commandLine './gradlew', 'performRelease', '-Preleasing.dryRun'
-    }.execute()
+        commandLine './gradlew', 'publishToMavenLocal', 'testRelease', '-x', 'gitPush', '-x', 'bintrayUpload'
+    }
 }
 
 task check {
