--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 // First, apply the publishing plugin
 buildscript {
     repositories {
-        mavenLocal()
+        mavenLocal()        // for e2e test
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath "com.gradle.publish:plugin-publish-plugin:0.9.6"
+        //TODO MS back to concrete version after finish
         classpath "gradle.plugin.org.mockito:mockito-release-tools:0.8.+"
     }
 }
