--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script:
   - ./gradlew build -s -i
 
 after_success:
-  - ./gradlew ciReleasePrepare && ./gradlew travisRelease -s
+  - ./gradlew assertReleaseNeeded && ./gradlew ciReleasePrepare && ./gradlew travisRelease -s
