--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,8 @@ task travisRelease {
     doLast {
         logger.lifecycle("{} - Publishing to Gradle Plugin Portal...", path)
         exec {
-            commandLine "./gradlew", "publishPlugins", "performVersionBump", "-Preleasing.dryRun=false",
+            commandLine "./gradlew", "publishPlugins", "performVersionBump",
+                    "-Preleasing.dryRun=false",
                     "-Pgradle.publish.key=${System.getenv('GRADLE_PUBLISH_KEY')}",
                     "-Pgradle.publish.secret=${System.getenv('GRADLE_PUBLISH_SECRET')}"
         }
