renamed plugin identifiers to org.shipkit.*

--- a/e2eTests/build.gradle
+++ b/e2eTests/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'base'    // for clean task
 // It needs to be commented until first version of release-tools with E2E plugin is released.
 // If not, Gradle is unable to configure whole project, because E2E plugin isn't published in any version yet.
 // TODO uncomment in next PR
-// apply plugin: 'org.mockito.mockito-release-tools.e2e-test'
+// apply plugin: 'org.shipkit.e2e-test'
 
 /*
 
