Gradle extension name from changed from 'releasing' to 'shipkit'

--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -1,4 +1,4 @@
-releasing {
+shipkit {
     gitHub.repository = "mockito/mockito-release-tools"
     gitHub.writeAuthUser = "mockito"
     gitHub.writeAuthToken = System.getenv("GH_WRITE_TOKEN")
