--- a/build.gradle
+++ b/build.gradle
@@ -97,7 +97,7 @@ task travisRelease {
         logger.lifecycle("{} - Publishing to Gradle Plugin Portal...", path)
         exec {
             commandLine "./gradlew", "publishPlugins", "performVersionBump",
-                    "-Preleasing.dryRun=false",
+                    "-Pshipkit.dryRun=false",
                     "-Pgradle.publish.key=${System.getenv('GRADLE_PUBLISH_KEY')}",
                     "-Pgradle.publish.secret=${System.getenv('GRADLE_PUBLISH_SECRET')}"
         }
