--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -1,11 +1,11 @@
-shipkit {
+releasing {
     gitHub.repository = "mockito/mockito-release-tools"
     gitHub.writeAuthUser = "mockito"
     gitHub.writeAuthToken = System.getenv("GH_WRITE_TOKEN")
     gitHub.readOnlyAuthToken = "e7fe8fcdd6ffed5c38498c4c79b2a68e6f6ed1bb"
 
     git.user = "Shipkit"
-    git.email = "<shipkit@gmail.com>"
+    git.email = "<shipkit.org@gmail.com>"
     git.releasableBranchRegex = "master|release/.+" // matches 'master', 'release/2.x', 'release/3.x', etc.
 
     def buildNo = System.getenv("TRAVIS_BUILD_NUMBER")
