--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ apply plugin: 'groovy'
 apply plugin: 'com.gradle.plugin-publish'
 apply plugin: 'checkstyle'
 apply plugin: 'codenarc'
-apply plugin: 'org.mockito.mockito-release-tools.gradle-plugin-releasing'
-apply plugin: 'org.mockito.mockito-release-tools.release-needed'
+apply plugin: 'org.shipkit.gradle-plugin-releasing'
+apply plugin: 'org.shipkit.release-needed'
 
 apply from: 'gradle/precommit.gradle'
 
@@ -97,7 +97,7 @@ task travisRelease {
         logger.lifecycle("{} - Publishing to Gradle Plugin Portal...", path)
         exec {
             commandLine "./gradlew", "publishPlugins", "performVersionBump",
-                    "-Preleasing.dryRun=false",
+                    "-Pshipkit.dryRun=false",
                     "-Pgradle.publish.key=${System.getenv('GRADLE_PUBLISH_KEY')}",
                     "-Pgradle.publish.secret=${System.getenv('GRADLE_PUBLISH_SECRET')}"
         }
