--- a/e2eTests/build.gradle
+++ b/e2eTests/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'base'    // for clean task
 
-// It needs to be commented until first version of release-tools with E2E plugin is released.
-// If not, Gradle is unable to configure whole project, because E2E plugin isn't published in any version yet.
-// TODO uncomment in next PR
-// apply plugin: 'org.shipkit.e2e-test'
+
+apply plugin: 'org.shipkit.e2e-test'
+
+// Test for now by command:
+// ./gradlew e2eTests:runTestReleaseMockito-release-tools-example
 
 /*
 
