--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -1,5 +1,5 @@
 shipkit {
-    gitHub.repository = "mockito/mockito-release-tools"
+    gitHub.repository = "mockito/shipkit"
     gitHub.writeAuthUser = "mockito"
     gitHub.writeAuthToken = System.getenv("GH_WRITE_TOKEN")
     gitHub.readOnlyAuthToken = "e7fe8fcdd6ffed5c38498c4c79b2a68e6f6ed1bb"
