--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath "com.gradle.publish:plugin-publish-plugin:0.9.6"
         classpath "gradle.plugin.org.shipkit:shipkit:0.8.82"
+        classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.3.0'
     }
 }
 
@@ -19,6 +20,7 @@ apply plugin: 'codenarc'
 apply plugin: 'org.shipkit.gradle-plugin-releasing'
 apply plugin: 'org.shipkit.release-needed'
 
+apply from: 'gradle/java6-compatibility.gradle'
 apply from: 'gradle/precommit.gradle'
 
 sourceCompatibility = 1.6
